fix: Arrumando o z-index da second_column

--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -117,6 +117,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 11;
 }
 
 .list_social_media {
